@@ -318,6 +318,8 @@ zbx_vmware_perf_entity_t	*zbx_vmware_service_get_perf_entity(zbx_vmware_service_
 
 char	*zbx_xml_read_value(const char *data, const char *xpath);
 int	zbx_xml_read_values(const char *data, const char *xpath, zbx_vector_str_t *values);
+int	zbx_xml_try_read_value(const char *data, const char *xpath, char **value, char **error);
+
 
 /* hypervisor properties */
 #define ZBX_VMWARE_HVPROP_OVERALL_CPU_USAGE		0
